<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".play.LevelFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/hline1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"/>

        <TextView
            android:id="@+id/level1"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:text="@string/level_1"
            android:textSize="25sp"
            android:gravity="center"
            android:background="@drawable/round_border_levels"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hline1"/>

        <View
            android:id="@+id/vline1"
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/level1"/>

        <TextView
            android:id="@+id/level2"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/level_2"
            android:textSize="25sp"
            android:gravity="center"
            android:background="@drawable/round_border_levels"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vline1"/>

        <View
            android:id="@+id/vline2"
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/level2"/>

        <TextView
            android:id="@+id/level3"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/level_3"
            android:textSize="25sp"
            android:gravity="center"
            android:background="@drawable/round_border_levels"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vline2"/>

        <View
            android:id="@+id/vline3"
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/level3"/>

        <TextView
            android:id="@+id/level4"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/level_4"
            android:textSize="25sp"
            android:gravity="center"
            android:background="@drawable/round_border_levels"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vline3"/>

        <View
            android:id="@+id/vline4"
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/level4"/>

        <TextView
            android:id="@+id/final_quiz"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/final_quiz"
            android:textSize="25sp"
            android:gravity="center"
            android:background="@drawable/round_border_levels"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vline4"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>