<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/results"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/results"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:background="@drawable/squared_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/okButton">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/scoreLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/results"
            app:layout_constraintTop_toTopOf="@id/results"
            app:layout_constraintBottom_toTopOf="@id/correctLayout">

            <TextView
                android:id="@+id/points"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/nPoints"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="20sp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/correctLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/results"
            app:layout_constraintTop_toBottomOf="@id/scoreLayout"
            app:layout_constraintBottom_toTopOf="@id/wrongLayout">

            <TextView
                android:id="@+id/correct"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:text="@string/correct"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/nCorrect"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text="2"
                android:textSize="20sp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/wrongLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/results"
            app:layout_constraintTop_toBottomOf="@id/correctLayout"
            app:layout_constraintBottom_toBottomOf="@id/results">

            <TextView
                android:id="@+id/wrong"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:text="@string/wrong"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/nWrong"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text="3"
                android:textSize="20sp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>