<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".play.LevelActivity"
    android:padding="16dp"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/leveltitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/level"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/level1"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:background="@drawable/round_border_levels"
            android:gravity="center"
            android:text="@string/level_1"
            android:fontFamily="casual"
            android:textSize="15sp"
            android:textColorHighlight="@android:color/holo_red_dark"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="58dp"
            app:layout_constraintTop_toBottomOf="@id/leveltitle"
            android:layout_marginTop="20dp"/>

        <View
            android:id="@+id/vline1"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/level1"/>

        <TextView
            android:id="@+id/level2"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/level_2"
            android:fontFamily="casual"
            android:textSize="15sp"
            android:textColorHighlight="@android:color/holo_red_dark"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:background="@drawable/round_border_levels"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vline1"/>

        <View
            android:id="@+id/vline2"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/level2"/>

        <TextView
            android:id="@+id/level3"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:fontFamily="casual"
            android:textSize="15sp"
            android:textColorHighlight="@android:color/holo_red_dark"
            android:textColor="@android:color/black"
            android:text="@string/level_3"
            android:gravity="center"
            android:background="@drawable/round_border_levels"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vline2"/>

        <View
            android:id="@+id/vline3"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/level3"/>

        <TextView
            android:id="@+id/level4"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:fontFamily="casual"
            android:textColorHighlight="@android:color/holo_red_dark"
            android:textColor="@android:color/black"
            android:text="@string/level_4"
            android:textSize="15sp"
            android:gravity="center"
            android:background="@drawable/round_border_levels"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vline3"/>

        <View
            android:id="@+id/vline4"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/level4"/>

        <TextView
            android:id="@+id/final_quiz"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/final_quiz"
            android:fontFamily="casual"
            android:textSize="15sp"
            android:textColorHighlight="@android:color/holo_red_dark"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:background="@drawable/round_border_levels"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vline4"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>