<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".play.CapFlagFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_or_flag"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line1">

        <ImageView
            android:id="@+id/city_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/city_icon"
            app:layout_constraintStart_toStartOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"/>

        <TextView
            android:id="@+id/cityText"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:textSize="30sp"
            android:text="@string/capital_cities"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toEndOf="@id/city_image"
            app:layout_constraintTop_toTopOf="@id/city"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/flag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line2">

        <ImageView
            android:id="@+id/flag_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/flag_icon"
            app:layout_constraintStart_toStartOf="@id/flag"
            app:layout_constraintTop_toTopOf="@id/flag"/>

        <TextView
            android:id="@+id/flagText"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:textSize="30sp"
            android:text="@string/flag"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toEndOf="@id/flag_image"
            app:layout_constraintTop_toTopOf="@id/flag"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flag"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>