<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8dd9af"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/fQuiz_count_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/fQuiz_title_city"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/fq_title"
                android:textStyle="bold|italic"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/fCity_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="What is the capital city of the below country?"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="17dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:id="@+id/fCity_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="17dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"/>

        <TextView
                android:id="@+id/answer_fcq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer"
                android:textColor="@android:color/black"
                android:textSize="17dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/fCity_text"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/response_fcq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Type Your Answer Here"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <Button
                android:id="@+id/confirm1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle"
                android:text="@string/confirm"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"/>


        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>