<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".play.CapFlagActivity"
    android:background="@drawable/game_bg"
    android:padding="15dp">

    <TextView
        android:id="@+id/title_cap_flag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city_or_flag"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_marginTop="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/squared_border"
        tools:layout_editor_absoluteY="63dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/title_cap_flag">

        <ImageView
            android:id="@+id/city_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/city_icon"
            app:layout_constraintStart_toStartOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"
            app:layout_constraintBottom_toBottomOf="@id/city" />

        <TextView
            android:id="@+id/cityText"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:text="@string/capital_cities"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/city_image"
            app:layout_constraintTop_toTopOf="@id/city" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/flag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/squared_border"
        app:layout_constraintTop_toBottomOf="@id/line2">

        <ImageView
            android:id="@+id/flag_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/flag_icon"
            app:layout_constraintStart_toStartOf="@id/flag"
            app:layout_constraintTop_toTopOf="@id/flag"
            app:layout_constraintBottom_toBottomOf="@id/flag" />

        <TextView
            android:id="@+id/flag_text"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:textSize="20sp"
            android:text="@string/flag"
            android:fontFamily="sans-serif-condensed-medium"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toEndOf="@id/flag_image"
            app:layout_constraintTop_toTopOf="@id/flag"
            app:layout_constraintBottom_toBottomOf="@id/flag"
            android:textColor="@android:color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flag"/>

</androidx.constraintlayout.widget.ConstraintLayout>